--- a/docroot/partner/forms/config/config.json
+++ b/docroot/partner/forms/config/config.json
@@ -20,18 +20,18 @@
     "graceperiod": "graceperiod"
   },
   "sections_validated": {
-    "START": true,
-    "ORGANISATION": true,
-    "GENERAL_INFORMATION": true,
-    "DESCRIPTION": true,
-    "CHIEF": true,
-    "CEO": true,
-    "OSH": true,
-    "COMMUNICATION_REP": true,
-    "BECOME": true,
-    "INVOLVEMENT": true,
-    "PLEDGE": true,
-    "PRIMARY_CONTACT": true,
-    "OTHER_USERS": true
+    "START": 1,
+    "ORGANISATION": 1,
+    "GENERAL_INFORMATION": 1,
+    "DESCRIPTION": 1,
+    "CHIEF": 1,
+    "CEO": 1,
+    "OSH": 1,
+    "COMMUNICATION_REP": 1,
+    "BECOME": 1,
+    "INVOLVEMENT": 1,
+    "PLEDGE": 1,
+    "PRIMARY_CONTACT": 1,
+    "OTHER_USERS": 1
   }
 }
